--- a/ubuntu-statefulset.yaml
+++ b/ubuntu-statefulset.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: ubuntu
-          image: rastasheep/ubuntu-sshd
+          image: abhaydandgedocker/ubuntu-ssh
           ports:
             - containerPort: 22
           volumeMounts:
